# airstack

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  LICENSE  Makefile  PLAN.md  README.md  airstack.toml  fozzy.toml  package.json
.github/workflows/: build.yml
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/container/: Cargo.toml
crates/container/src/: docker.rs  lib.rs
crates/core/: Cargo.toml
crates/core/src/: dependencies.rs  deploy_runtime.rs  env_loader.rs  infra_preflight.rs  lib.rs  main.rs  output.rs  provider_profiles.rs  retry.rs  secrets_store.rs  ssh_utils.rs  state.rs  theme.rs
crates/core/src/commands/: apply.rs  backup.rs  cexec.rs  cli.rs  deploy.rs  destroy.rs  doctor.rs  drift.rs  edge.rs  golive.rs  init.rs  logs.rs  mod.rs  plan.rs  provider.rs  reconcile.rs  registry.rs  release.rs  runbook.rs  scale.rs  script.rs  secrets.rs  ship.rs  ssh.rs  status.rs  support_bundle.rs  tui.rs  tui_stub.rs  up.rs
crates/metal/: Cargo.toml
crates/metal/src/: fly.rs  hetzner.rs  lib.rs
scripts/: fozzy-suite.sh  install-binary.js
src/: binary.ts  cli.ts  config.ts  index.ts  sdk.ts  types.ts  validation.ts
tests/: sdk.test.mjs
tests/fozzy/: host_cli_surface.fozzy.json  host_quality_gate.fozzy.json
