[workspace]
members = ["crates/core", "crates/metal", "crates/container", "crates/config"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Airstack Team"]
description = "Modular, type-safe infrastructure SDK and CLI"
license = "MIT"
repository = "https://github.com/airstack/airstack"

[workspace.dependencies]
clap = { version = "4.4", features = ["derive", "env", "color"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1.0", features = ["full"] }
bollard = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
dirs = "5.0"
async-trait = "0.1"
tokio-stream = "0.1"
dotenvy = "0.15"
