[package]
name = "airstack-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Configuration parsing and validation for Airstack"
license.workspace = true

[dependencies]
serde.workspace = true
toml.workspace = true
anyhow.workspace = true
dirs.workspace = true