[package]
name = "airstack-container"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Container runtime management for Airstack"
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
bollard.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true