[package]
name = "airstack-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Core abstractions and CLI for Airstack"
license.workspace = true

[[bin]]
name = "airstack"
path = "src/main.rs"

[features]
default = []
tui = ["dep:ftui"]

[dependencies]
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
uuid.workspace = true
dirs.workspace = true
dotenvy.workspace = true
crossterm.workspace = true

airstack-config = { path = "../config" }
airstack-metal = { path = "../metal" }
airstack-container = { path = "../container" }
ftui = { path = "../../frankentui/crates/ftui", optional = true }
