[package]
name = "airstack-metal"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Bare metal provisioning providers for Airstack"
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
dirs.workspace = true